--- a/index.htm
+++ b/index.htm
@@ -4,18 +4,18 @@
     <title>RS Imobiliária</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="user-scalable=no, initial-scale=0.6, width=device-width, viewport-fit=cover" />
-    <link rel="preload" href="script.js?v=1621277569155" as="script"/>
-<link rel="preload" href="media/panorama_71FC0105_7A16_E532_41AB_EE1EAB842EF9_0/l/3/0_0.jpg?v=1621277569155" as="image"/>
-<link rel="preload" href="media/panorama_71FC0105_7A16_E532_41AB_EE1EAB842EF9_0/r/3/0_0.jpg?v=1621277569155" as="image"/>
-<link rel="preload" href="media/panorama_71FC0105_7A16_E532_41AB_EE1EAB842EF9_0/u/3/0_0.jpg?v=1621277569155" as="image"/>
-<link rel="preload" href="media/panorama_71FC0105_7A16_E532_41AB_EE1EAB842EF9_0/d/3/0_0.jpg?v=1621277569155" as="image"/>
-<link rel="preload" href="media/panorama_71FC0105_7A16_E532_41AB_EE1EAB842EF9_0/f/3/0_0.jpg?v=1621277569155" as="image"/>
-<link rel="preload" href="media/panorama_71FC0105_7A16_E532_41AB_EE1EAB842EF9_0/b/3/0_0.jpg?v=1621277569155" as="image"/>
+    <link rel="preload" href="script.js?v=1621282586041" as="script"/>
+<link rel="preload" href="media/panorama_71FC0105_7A16_E532_41AB_EE1EAB842EF9_0/l/3/0_0.jpg?v=1621282586041" as="image"/>
+<link rel="preload" href="media/panorama_71FC0105_7A16_E532_41AB_EE1EAB842EF9_0/r/3/0_0.jpg?v=1621282586041" as="image"/>
+<link rel="preload" href="media/panorama_71FC0105_7A16_E532_41AB_EE1EAB842EF9_0/u/3/0_0.jpg?v=1621282586041" as="image"/>
+<link rel="preload" href="media/panorama_71FC0105_7A16_E532_41AB_EE1EAB842EF9_0/d/3/0_0.jpg?v=1621282586041" as="image"/>
+<link rel="preload" href="media/panorama_71FC0105_7A16_E532_41AB_EE1EAB842EF9_0/f/3/0_0.jpg?v=1621282586041" as="image"/>
+<link rel="preload" href="media/panorama_71FC0105_7A16_E532_41AB_EE1EAB842EF9_0/b/3/0_0.jpg?v=1621282586041" as="image"/>
 <script src="scorm.js" type="text/javascript"></script>
 <script>(function(i,s,o,g,r,a,m){i["GoogleAnalyticsObject"]=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,"script","//www.google-analytics.com/analytics.js","ga");ga("create", "UA-116087-3", "auto"); ga("send", "pageview");</script>
 <meta name="description" content="Administradora de Condomínios"/>
 <meta name="theme-color" content="#170C51"/>
-    <script src="lib/tdvplayer.js?v=1621277569155"></script>
+    <script src="lib/tdvplayer.js?v=1621282586041"></script>
     <script type="text/javascript">
         var player;
         var playersPlayingTmp = [];
@@ -53,10 +53,10 @@
             var settings = new TDV.PlayerSettings();
             
             settings.set(TDV.PlayerSettings.CONTAINER, document.getElementById('viewer'));
-            settings.set(TDV.PlayerSettings.SCRIPT_URL, 'script.js?v=1621277569155');
-            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1621277569155');
-            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1621277569155');
-            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1621277569155');
+            settings.set(TDV.PlayerSettings.SCRIPT_URL, 'script.js?v=1621282586041');
+            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1621282586041');
+            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1621282586041');
+            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1621282586041');
             window.tdvplayer = player = TDV.PlayerAPI.create(settings);
             player.bind('preloadMediaShow', beginFunc, player, true);
             player.bind('stateChange', beginFunc, player, true);
@@ -338,10 +338,10 @@ loadTour()
         #viewer { background-color: #170C51; z-index:1; position:absolute; width: 100%; height: 100%; top: 0; }
         #preloadContainer { z-index:2; position:relative; width:100%; height:100%; transition: opacity 0.5s; -webkit-transition: opacity 0.5s; -moz-transition: opacity 0.5s; -o-transition: opacity 0.5s;}
     </style>
-    <link rel="stylesheet" href="fonts.css?v=1621277569155">
+    <link rel="stylesheet" href="fonts.css?v=1621282586041">
 </head>
 <body onload="onLoad()">
-    <div id="preloadContainer" style="background-color:rgba(23,12,81,1)"><div style="z-index: 4; position: absolute; background-image: url('loading/HTMLImage_769232AD_7A36_A74D_41CC_577E6C26D43E.JPG'); background-size: contain; background-repeat: no-repeat; background-position: center center; overflow: hidden; right: 33.57933579335797%; top: 4.288164665523154%; width: 28.42%; height: 42.88%"></div><div style="z-index: 5; position: absolute; left: 0%; top: 58.404802744425375%; width: 100.00%; height: 10.00%"><div style="text-align:left; color:#000; "><DIV STYLE="text-align:center;"><SPAN STYLE="letter-spacing:0vmin;color:#777777;font-family:Arial, Helvetica, sans-serif;"><SPAN STYLE="color:#ffffff;font-size:5.15vmin;">Carregando Tour Virtual. Por favor Aguarde...</SPAN></SPAN></DIV><p STYLE="margin:0; line-height:5.15vmin;"><BR STYLE="letter-spacing:0vmin;color:#000000;font-size:2.06vmin;font-family:'Segoe UI';"/></p></div></div></div>
+    <div id="preloadContainer" style="background-color:rgba(23,12,81,1)"><div style="z-index: 4; position: absolute; background-image: url('loading/HTMLImage_769232AD_7A36_A74D_41CC_577E6C26D43E.JPG'); background-size: contain; background-repeat: no-repeat; background-position: center center; overflow: hidden; right: 33.58%; top: 4.29%; width: 28.42%; height: 42.88%"></div><div style="z-index: 5; position: absolute; left: 0%; top: 58.4%; width: 100.00%; height: 10.00%"><div style="text-align:left; color:#000; "><DIV STYLE="text-align:center;"><SPAN STYLE="letter-spacing:0vmin;color:#777777;font-family:Arial, Helvetica, sans-serif;"><SPAN STYLE="color:#ffffff;font-size:5.15vmin;">Carregando Tour Virtual. Por favor Aguarde...</SPAN></SPAN></DIV><p STYLE="margin:0; line-height:5.15vmin;"><BR STYLE="letter-spacing:0vmin;color:#000000;font-size:2.06vmin;font-family:'Segoe UI';"/></p></div></div></div>
     <div id="viewer"></div>
 </body>
 </html>
